; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_portlistingparse.c_FreePortListing.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_portlistingparse.c_FreePortListing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.PortMappingParserData = type { %struct.PortMapping* }
%struct.PortMapping = type { %struct.PortMapping* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FreePortListing(%struct.PortMappingParserData* %0) #0 {
  %2 = alloca %struct.PortMappingParserData*, align 8
  %3 = alloca %struct.PortMapping*, align 8
  store %struct.PortMappingParserData* %0, %struct.PortMappingParserData** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.PortMappingParserData*, %struct.PortMappingParserData** %2, align 8
  %6 = getelementptr inbounds %struct.PortMappingParserData, %struct.PortMappingParserData* %5, i32 0, i32 0
  %7 = load %struct.PortMapping*, %struct.PortMapping** %6, align 8
  store %struct.PortMapping* %7, %struct.PortMapping** %3, align 8
  %8 = icmp ne %struct.PortMapping* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %4
  %10 = load %struct.PortMapping*, %struct.PortMapping** %3, align 8
  %11 = getelementptr inbounds %struct.PortMapping, %struct.PortMapping* %10, i32 0, i32 0
  %12 = load %struct.PortMapping*, %struct.PortMapping** %11, align 8
  %13 = load %struct.PortMappingParserData*, %struct.PortMappingParserData** %2, align 8
  %14 = getelementptr inbounds %struct.PortMappingParserData, %struct.PortMappingParserData* %13, i32 0, i32 0
  store %struct.PortMapping* %12, %struct.PortMapping** %14, align 8
  %15 = load %struct.PortMapping*, %struct.PortMapping** %3, align 8
  %16 = call i32 @free(%struct.PortMapping* %15)
  br label %4

17:                                               ; preds = %4
  ret void
}

declare dso_local i32 @free(%struct.PortMapping*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
